# NTU_canoebot

./: .dockerignore  .env_example  .gitignore  .random.py  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TrainingLog.py  TrainingLog.test.py  bashcmds.py  botsettings.debug.json  canoebot.py  canoebot_misc_handlers.py  canoebot_old.py  contacttrace.py  debuglogging.py  docker-compose.yml  formfiller.py  getupdates.py  gymscraper.py  json_update.py  json_update.test.py  requirements.txt  settings.py  sheetscraper.py  sheetscraper.test.py  srcscraper  srcscraper.config.json  srcscraper.py  test_formfiller.py  utilities.py
.cargo/: config.toml
.configs/: .gitignore  botsettings.template.d.json  botsettings.template.d.toml  botsettings.template.json  botsettings.template.toml  srcscraper.config.json  srcscraper.config.toml
.media/: land_layout.excalidraw  sheet_config.excalidraw  sheet_layout.excalidraw
.scripts/: .canoebotdebug.sh  .canoebotdeploy.sh  .canoebotlog.sh  .canoebotrestart.sh  .canoebotstop.sh  .canoebotupdate.sh  .canoebotvenv.sh  data.sh  echo_colours.sh  functions.sh  install.sh  install_venv.sh  newtest.sh  requirements.txt  tempfile.sh  uninstall.sh  update.sh
bot_modules/: __init__.py  common_core.py  core_handlers.py  events.py  helptext.py  keyboards.py  misc_handlers.py  restrict_handlers.py  utilities.py
canoebot_modules/: __init__.py  common_core.py  core_handlers.py  events.py  keyboards.py  misc_handlers.py  restrict_handlers.py
crates/emoji_vomit/: Cargo.toml
crates/emoji_vomit/src/: consts.rs  lib.rs  uwuify.rs
crates/g_forms/: Cargo.toml
crates/g_forms/src/: form.rs  lib.rs  question.rs  raw.rs
crates/g_sheets/: Cargo.toml
crates/g_sheets/src/: lib.rs
crates/ntu_canoebot/: Cargo.toml
crates/ntu_canoebot/src/: callback.rs  command.rs  dictionaries.rs  events.rs  frame.rs  log_writer.rs  main.rs  threadmonitor.rs
crates/ntu_canoebot/src/callback/: booking.rs  breakdown.rs  callbacks.rs  land.rs  logsheet.rs  menu.rs  namelist.rs  paddling.rs  ping.rs  src.rs  training.rs  whatactually.rs
crates/ntu_canoebot/src/command/: commands.rs  silence.rs  src.rs
crates/ntu_canoebot_attd/: Cargo.toml
crates/ntu_canoebot_attd/src/: deconflict.rs  lib.rs  logsheet.rs  update.rs
crates/ntu_canoebot_config/: Cargo.toml  build.rs
crates/ntu_canoebot_config/src/: lib.rs
crates/ntu_canoebot_macros/: Cargo.toml
crates/ntu_canoebot_macros/src/: enum_parent.rs  lib.rs  utils.rs
crates/ntu_canoebot_traits/: Cargo.toml
crates/ntu_canoebot_traits/src/: lib.rs  traits.rs
crates/ntu_canoebot_util/: Cargo.toml
crates/ntu_canoebot_util/src/: lib.rs  macros.rs
crates/ntu_src/: Cargo.toml
crates/ntu_src/src/: lib.rs
data/: boats.csv  names.csv
docker/: build.Dockerfile  build.Dockerfile.dockerignore  cache.Dockerfile  cache.Dockerfile.dockerignore
formscraper/: formscraper.py  formscraper.test.py  formscraper_cli.py  gForm.notes.json  gForm.py  gForm.test.py  sampleJSON.json
lib/: Dotionary.py  gForm.py  liblog.py
lights/: pwmschedule.json
modules/: TrainingLog.py  __init__.py  bashcmds.py  botstats.py  contacttrace.py  formfiller.py  getupdates.py  gymscraper.py  json_update.py  settings.py  sheetscraper.py  srcscraper.py  utilities.py  wikilookup.py
modules/dictionaries/: __init__.py  urbandictionary.py  wiki.py
modules/statistics/: __init__.py  data_retrieval.py  data_retrival.py
tests/: __init__.py  test_sheetscraper.py  test_srcscraper.py
tests/bot_modules/: test_utilities.py
