[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = 'symbols'
lto = true
codegen-units = 1
# opt-level = 's'
# debug = true

[workspace.dependencies]
log = '0.4'
teloxide = {version = "0.12", features = ["macros", "ctrlc_handler"]}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4"
toml = "0.8"
polars = {version = "0.35", features = ["csv"]}
