[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = 'symbols'
lto = true
codegen-units = 1
# opt-level = 's'
# debug = true

[workspace.dependencies]
log = '0.4'
async-std = "1.12.0"
futures = "0.3.30"
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
tokio = { version = ">=1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.5"
toml = "0.8"
polars = { version = "0.42", default-features = false, features = ["csv", "fmt"] }
vfs = { version = "0.12.0", features = ["async-vfs"] }
