[package]
name = "emoji_vomit"
version = "0.1.0"
edition.workspace = true
description = "Why is this a thing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }

ntu_canoebot_util = { path = "../ntu_canoebot_util" }

emoji = "0.2.1"
rustc-hash = "1.1.0"
