[package]
name = "g_forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }

ntu_canoebot_util = { path = "../ntu_canoebot_util" }

serde_repr = "0.1.16"
scraper = "0.17.1"
regex = "1.10.2"
