[package]
name = "g_sheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_derive = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
lazy_static = {workspace = true}

csv = "1.2.1"
