[package]
name = "ntu_canoebot"
version = "0.1.0"
edition = "2021"
description = "bot core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
g_forms = {path = "../g_forms"}
g_sheets = {path = "../g_sheets"}
ntu_canoebot_attd = {path = "../ntu_canoebot_attd"}
ntu_canoebot_config = {path = "../ntu_canoebot_config"}
ntu_canoebot_util = {path = "../ntu_canoebot_util"}
ntu_src = {path = "../ntu_src"}

teloxide = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
lazy_static = {workspace = true}
toml = {workspace = true}

log = '0.4'
pretty_env_logger = '0.5.0'
bincode = '1.3.3'
inflate = '0.4.5'
deflate = '1.0.0'
base64 = '0.21.0'
async-trait = '0.1.68'
dotenv = "0.15.0"
