[package]
name = "ntu_canoebot"
version = "0.2.7"
edition = "2021"
description = "bot core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
g_forms = { path = "../g_forms" }
g_sheets = { path = "../g_sheets" }
ntu_canoebot_attd = { path = "../ntu_canoebot_attd" }
ntu_canoebot_config = { path = "../ntu_canoebot_config" }
ntu_canoebot_util = { path = "../ntu_canoebot_util" }
ntu_canoebot_traits = { path = "../ntu_canoebot_traits" }
ntu_src = { path = "../ntu_src" }
emoji_vomit = { path = "../emoji_vomit" }

async-std = { workspace = true }
futures = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
vfs = { workspace = true }

anyhow = "1.0.75"
pretty_env_logger = '0.5.0'
bincode = '1.3.3'
inflate = '0.4.5'
deflate = '1.0.0'
base64 = '0.21.5'
async-trait = '0.1.74'
dotenv = "0.15.0"
tokio_schedule = "0.3.1"
veil = "0.1.6"

async_once = "0.2.6"
image = "0.24.7"
text-to-png = "0.2.0"
