[package]
name = "ntu_canoebot_attd"
version = "0.1.0"
edition = "2021"
description = "Attendance handler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
chrono = {workspace = true}
lazy_static = {workspace = true}
polars = {workspace = true}

g_sheets = {path = "../g_sheets"}
ntu_canoebot_config = {path = "../ntu_canoebot_config"}
ntu_canoebot_util = {path = "../ntu_canoebot_util"}

