[package]
name = "ntu_canoebot_config"
version = "0.1.0"
edition = "2021"
description = "config fetch and generator"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.4"

[build-dependencies]
toml = "0.7.4"
