[package]
name = "ntu_canoebot_config"
version = "0.1.0"
edition = "2021"
description = "Configuration file codegen crate"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {workspace = true}
toml = {workspace = true}

[build-dependencies]
toml = {workspace = true}
