[package]
name = "ntu_src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntu_canoebot_util = {path = "../ntu_canoebot_util"}

lazy_static = "1.4.0"
chrono = "0.4.26"
toml = "0"
serde = "1.0.164"
serde_derive = "1.0.164"
reqwest = "0.11.18"
tokio = {version = "1.29.1", features = ["macros"]}
table-extract = "0.2.3"
